Several tweaks and fixes
* Added deactivation function if pro version is activated
* Added wp_reset_postdata functions in widgets with loops
* Removed unnecessary text in feature list widget options
* Updated styles for social icons in profile widget so it works in
sidebars
* Changed plugin name from Organic Customizer Widgets to Organic
Builder Widgets
* Fixed layout issue if multiple profile widgets were grouped together

--- a/admin/css/organic-widgets-admin.css
+++ b/admin/css/organic-widgets-admin.css
@@ -125,7 +125,7 @@
 .welcome-screen .feature-links a {
 	display: flex;
 	align-items: center;
-  max-width: 33.3%;
+  max-width: 25%;
 	text-decoration: none;
 	margin: 6px 0px;
 	padding: 12px;
@@ -135,6 +135,9 @@
 .welcome-screen .feature-links a:first-child {
   border-right: none;
   border-radius: 3px 0px 0px 3px;
+}
+.welcome-screen .feature-links a:nth-child(3) {
+  border-left: none;
 }
 .welcome-screen .feature-links a:last-child {
   border-left: none;
